# lorvex

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  ROADMAP.md
apps/tauri/: .env.build.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deny.toml  knip.json  package-lock.json  package.json
apps/tauri/app/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/tauri/app/e2e/: i18n-visual.spec.ts  main-window-smoke.spec.ts  navigation.spec.ts  quick-capture.spec.ts  settings.spec.ts  today-view.spec.ts  view-switching.spec.ts  welcome-offline-banner.spec.ts
apps/tauri/app/src/: App.tsx  app.runtime.ts  index.css  main.runtime.ts  main.tsx
apps/tauri/app/src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json
apps/tauri/docs/: CLAUDE_PROMPT.md  INDEX.md
apps/tauri/docs/archive/: README.md
apps/tauri/docs/design/: ARCHITECTURE.md  CALENDAR_BEHAVIOR.md  CLAUDE_OPERATING_MODEL.md  COMMAND_PALETTE.md  COPY_GUIDELINES.md  DATA_MODEL.md  DESIGN_TOKENS.md  DISTRIBUTION.md  FEATURES.md  MACOS_MENU_BAR.md  MCP_TOOLS.md  MULTI_SURFACE_ARCHITECTURE.md  PER_VIEW_CONTENT_STRATEGY.md  PLATFORM_CAPABILITY_MATRIX.md  SECURITY_MESSAGING.md  SYNC_APPLY_SEMANTICS.md  TIMEZONE_SEMANTICS.md  UX.md  UX_PATTERNS.md
apps/tauri/docs/execution/: CI_RELEASE_TRIGGER_POLICY.md  ISSUE_LIFECYCLE.md  MCP_E2E_VALIDATION.md  MENUBAR_REGRESSION_CHECKLIST.md  MODULE_CONTRACT_MATRIX.md  SCALE_RESILIENCE_CHECKLIST.md  SETTINGS_REGRESSION_CHECKLIST.md  SYNC_RECOVERY_PLAYBOOK.md  TEST_FLAKINESS.md  THEME_QA_CHECKLIST.md
apps/tauri/docs/reference/: PLATFORM_THEME_DESIGN.md  REPO_FACTS.md
apps/tauri/docs/setup/: ASSISTANT_MCP_SETUP.md  DEEP_LINK_URL_SCHEME.md  FIRST_RUN_OFFLINE.md  GETTING_STARTED.md
apps/tauri/docs/vision/: COMPETITIVE_LANDSCAPE.md  DESIGN_PHILOSOPHY.md  PITCH_EN.md  VISION.md
apps/tauri/lorvex-cli/: Cargo.toml
apps/tauri/lorvex-cli/src/: main.rs  models.rs  tests.rs
apps/tauri/lorvex-domain/: Cargo.toml
apps/tauri/lorvex-domain/src/: attendee_identity.rs  defaults.rs  entity_id.rs  fts.rs  hlc_session.rs  hlc_state.rs  ids.rs  lib.rs  parsing.rs  patch.rs  provider_link.rs  serde_support.rs
apps/tauri/lorvex-mcp-derive/: Cargo.toml
apps/tauri/lorvex-mcp-derive/src/: lib.rs
apps/tauri/lorvex-runtime/: Cargo.toml  build.rs
apps/tauri/lorvex-runtime/src/: error.rs  lib.rs  mcp_authority.rs  surface_hlc.rs
apps/tauri/lorvex-runtime/tests/: surface_hlc_runtime.rs
apps/tauri/lorvex-store/: Cargo.toml
apps/tauri/lorvex-store/src/: cancellation.rs  connection_pool.rs  device_state.rs  export_scope.rs  focus_schedule_snapshot.rs  fs_durability.rs  interchange.rs  jsonl_identity.rs  lib.rs  projection.rs  recurrence_exceptions.rs  status_transition_sql.rs  test_support.rs
apps/tauri/lorvex-store/tests/: calendar_timeline.rs  explain_query_plan.rs  export_import_roundtrip.rs  migrations.rs
apps/tauri/lorvex-sync/: Cargo.toml
apps/tauri/lorvex-sync-payload/: Cargo.toml
apps/tauri/lorvex-sync-payload/src/: calendar_event_wire.rs  error.rs  lib.rs  support.rs
apps/tauri/lorvex-sync/src/: audit_retention.rs  conflict_log.rs  envelope.rs  error.rs  error_log.rs  hlc.rs  lib.rs  snapshot_import.rs  startup_trash_purge.rs
apps/tauri/lorvex-sync/tests/: apply_integration.rs  payload_shadow_promotion.rs  pending_inbox_integration.rs  restart_durability.rs
apps/tauri/lorvex-workflow/: Cargo.toml
apps/tauri/lorvex-workflow/src/: calendar_recurrence_scope.rs  current_focus.rs  daily_review_date.rs  habit_reminder_ops.rs  habit_reminder_policy.rs  lib.rs  list_reorganize.rs  mutation.rs  mutation_extras.rs  note_summary.rs  reminder_anchor.rs  task_ai_notes.rs  task_archive.rs  task_batch_create.rs  task_checklist.rs  task_deferral.rs  task_dependency_edges.rs  task_lifecycle_undo.rs  task_permanent_delete.rs  task_recurrence.rs  task_reminders.rs  task_response.rs
apps/tauri/lorvex-workflow/tests/: overview.rs
apps/tauri/mcp-server/: Cargo.toml
apps/tauri/mcp-server/benches/: router.rs
apps/tauri/mcp-server/src/: contract.rs  contract_validate.rs  db.rs  error.rs  json_row.rs  lib.rs  main.rs  public_api.rs  time.rs
apps/tauri/mcp-server/tests/: db_migrations.rs
apps/tauri/scripts/: README.md  build_cli.sh  build_dmg.sh  build_windows.ps1  dev_session_preflight.sh  install_cli.sh  update_and_install.sh  update_and_install_linux.sh  update_and_install_windows.ps1
apps/tauri/scripts/ci/: cargo_audit_with_policy.sh  resolve_ci_mode.mjs
apps/tauri/scripts/fixtures/: README.md  seed.sql  seed_scale.sql
apps/tauri/scripts/generate/: docs_index.mjs  locale_types.mjs  mcp_tools.mjs  repo_facts.mjs
apps/tauri/scripts/lib/: css_graph.mjs  ui_wiring_contract_support.mjs  ui_wiring_module_ast_contract.mjs  verifier_runtime.mjs
apps/tauri/scripts/lint/: tailwind_class_audit.mjs
apps/tauri/scripts/manual-gate/: generate_report.mjs  smoke_runner.mjs  templates.mjs
apps/tauri/scripts/mcp/: prepare_runtime.mjs  verify_runtime_bundle.mjs
apps/tauri/scripts/release/: create_manifest.mjs  preflight.mjs  preflight.sh  write_checksums.mjs
apps/tauri/scripts/tests/: run_contract_verifiers.sh
apps/tauri/scripts/verify/: _forbidden_pattern.mjs  android_background_reliability_contract.mjs  android_scaffold.mjs  android_typography_contract.mjs  appselect_variant_contract.mjs  audit_marker_count.sh  backticked_repo_paths.mjs  cargo_dead_code.mjs  cargo_deps_aligned.mjs  cargo_lockfile_integrity.mjs  cargo_machete.mjs  contact_mail_absence.mjs  day_context_math.mjs  day_context_math.test.ts  decomposition_drift.mjs  design_tokens_completeness.mjs  desktop_aux_window_contract.mjs  desktop_channel.mjs  dev_session_preflight.mjs  doc_governance.mjs  event_color_consistency.mjs  focus_ring_consistency.mjs  i18n_parity.mjs  i18n_source_keys.mjs  ipc_command_parity.mjs  (+43 more)
apps/tauri/shared/: package.json
apps/tauri/skill/: SKILL.md
(+6401 files in other folders)
