[package]
name = "lorvex-sync"
# Audit #3008-L3: inherit version from [workspace.package].version.
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Sync protocol layer for Lorvex — outbox, envelope, merge pipeline, transport adapters."
publish = false
# Audit #2295: inherit MSRV from [workspace.package].
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
# Issue #3285: typed entity-id rusqlite binding impls.
lorvex-domain = { path = "../lorvex-domain", features = ["rusqlite"] }
lorvex-runtime = { path = "../lorvex-runtime" }
lorvex-store = { path = "../lorvex-store" }
lorvex-sync-payload = { path = "../lorvex-sync-payload" }
lorvex-workflow = { path = "../lorvex-workflow" }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
[dev-dependencies]
# Audit #2991-M6 (ERR-M3): `lorvex_store::open_db_in_memory` is gated
# behind `cfg(any(test, feature = "test-support"))` so production
# binaries cannot reach its panic-on-migration-failure path. Tests
# (the `#[cfg(test)] test_db()` helper plus every integration test in
# `tests/`) opt back in via this dev-dep override.
lorvex-store = { path = "../lorvex-store", features = ["test-support"] }
tempfile.workspace = true
